--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap");
 
 html,
 body,
@@ -7,7 +7,7 @@ body .root {
   height: 100%;
   width: 100%;
   margin: 0px;
-  font-family: Poppins;
+  font-family: Manrope;
   display: flex;
   flex-direction: column;
 }
